--- a/centos/base/Dockerfile
+++ b/centos/base/Dockerfile
@@ -23,11 +23,14 @@ RUN chmod +x /usr/local/bin/gosu
 RUN yum group install -y "Development Tools" \
     && yum clean metadata
 
+
 RUN yum install -y which \
     && yum install -y wget \
     && yum install -y texinfo \
     && yum install -y vim-enhanced \
     && yum install -y mlocate \
+    && yum install -y libcurl-devel \
+    && yum install -y expat-devel \
     && yum install -y zlib-devel \
     && yum install -y perl-ExtUtils-MakeMaker \
     && yum clean metadata
@@ -35,19 +38,18 @@ RUN yum install -y which \
 
 # ----------------------------------------------------------------------------
 # Update git to a version that isn't broken
-RUN GIT_SOURCE=/usr/local/src/git.git \
-    && mkdir $GIT_SOURCE \
-    && cd $GIT_SOURCE \
+RUN cd /usr/local/src \
     && git clone \
        --depth 1 \
        --branch v2.8.1 \
-       https://github.com/git/git.git . \
+       https://github.com/git/git.git git.git \
+    && cd git.git \
     && make configure \
     && ./configure --without-tcltk \
     && make \
     && make install \
     && cd .. \
-    && rm -rf $GIT_SOURCE
+    && rm -rf git.git
 
 
 # ----------------------------------------------------------------------------
