--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ external_tools/HDF-EOS2.19v1.00.tar.Z
 external_tools/wgrib.tar.v1.8.1.2c
 external_tools/Python-2.7.11.tgz
 external_tools/gosu-amd64
+external_tools/modtran-*
