--- a/centos/science/Dockerfile
+++ b/centos/science/Dockerfile
@@ -21,7 +21,7 @@ ENV PREFIX=/usr/local \
 # ----------------------------------------------------------------------------
 
 RUN REPO_NAME=espa-product-formatter \
-    && REPO_TAG=dev_v1.7.0 \
+    && REPO_TAG=product_formatter_v1.7.0 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
@@ -69,7 +69,7 @@ RUN REPO_NAME=espa-surface-water-extent \
 
 
 RUN REPO_NAME=espa-surface-reflectance \
-    && REPO_TAG=dev_may2016 \
+    && REPO_TAG=surface_reflectance_may2016 \
     && cd $SRC_DIR \
     && git clone https://github.com/USGS-EROS/${REPO_NAME}.git ${REPO_NAME} \
     && cd ${REPO_NAME} \
